base/seerr/service.yaml
---
# Source: seerr-chart/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-seerr-chart
  labels:
    helm.sh/chart: seerr-chart-3.3.0
    app.kubernetes.io/name: seerr-chart
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/version: "v3.1.0"
    app.kubernetes.io/part-of: seerr-chart
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 5055
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30086
  selector:
    app.kubernetes.io/name: seerr-chart
    app.kubernetes.io/instance: seerr
  ipFamilyPolicy: PreferDualStack
